[build-system]
requires = ["setuptools>=43"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = 3.7
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
local_partial_types = true
strict_equality = true
show_error_codes = true
