[metadata]
name = libdl
version = attr: libdl.__version__
description = Library to download HTTP(S) URLs.
author = salahbsmdz
author_email = salahwater21@gmail.com
url = https://github.com/salahbsmdz/libdl
license = MIT
keywords = download, http, https

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
libdl = py.typed
