[metadata]
name = libdl
version = attr: libdl.__version__
description = Library to download HTTP(S) URLs.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = salahbsmdz
author_email = salahwater21@gmail.com
url = https://github.com/salahbsmdz/libdl
license = MIT
keywords = download, http, https

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
libdl = py.typed
